// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot LabbookPaginationLoader LabbookPaginationLoader isLoading false 1`] = `
<div
  className="LabbookPaginationLoader--hidden"
>
  <div />
</div>
`;

exports[`Snapshot LabbookPaginationLoader LabbookPaginationLoader isLoading true 1`] = `
<div
  className="Card Card--300 column-4-span-3 flex flex--column justify--space-between LabbookPaginationLoader LabbookPaginationLoader--undefined"
>
  <div />
</div>
`;
